--- a/openstack_dashboard/dashboards/project/containers/templates/containers/_container_detail.html
+++ b/openstack_dashboard/dashboards/project/containers/templates/containers/_container_detail.html
@@ -17,6 +17,8 @@
     {% else %}
     <dd>{% trans "Private" %}</dd>
     {% endif %}
+    <dt>{% trans "Container Encrypted" %}</dt>
+    <dd>{{ container.encrypted }}</dd>
     <dt>{% trans "Object Count" %}</dt>
     <dd>{{ container.container_object_count }}</dd>
     <dt>{% trans "Size" %}</dt>
